--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -73,7 +73,7 @@ html {
   }
 } */
 
-/* *=========== Orange theme =========== */
+/* *=========== GREEN theme =========== */
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -85,8 +85,8 @@ html {
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
 
-    --primary: 24.6 95% 53.1%;
-    --primary-foreground: 60 9.1% 97.8%;
+    --primary: 80 48% 65%;
+    --primary-foreground: 80 20% 10%;
 
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
@@ -102,7 +102,7 @@ html {
 
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
-    --ring: 24.6 95% 53.1%;
+    --ring: 80 48% 65%;
     --radius: 0.5rem;
   }
 
@@ -116,8 +116,8 @@ html {
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
 
-    --primary: 20.5 90.2% 48.2%;
-    --primary-foreground: 60 9.1% 97.8%;
+    --primary: 80 55% 55%;
+    --primary-foreground: 80 20% 95%;
 
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 60 9.1% 97.8%;
@@ -133,7 +133,7 @@ html {
 
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
-    --ring: 20.5 90.2% 48.2%;
+    --ring: 80 55% 55%;
   }
 }
 
@@ -141,6 +141,7 @@ html {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
